# SOA

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yml
Auth/: Dockerfile  openapi.yaml  pyproject.toml
Auth/src/: config.py  run.py
Auth/src/api/: routes.py
Auth/src/api/endpoints/: auth.py  stats.py  tasks.py
Auth/src/common/: auth_utils.py  exception.py  repository.py  schema.py
Auth/src/database/: model.py  session.py
Auth/src/grpc_tasks/: tasks_pb2.py
Auth/src/message_broker/: producer.py
Auth/src/utils/: auth_utils.py  grpc_client_stub.py  model_repository.py
Auth/tests/: Makefile  tests_unit.py
Statistics/: Dockerfile  pyproject.toml
Statistics/src/: config.py  run.py
Statistics/src/api/: routes.py
Statistics/src/api/endpoints/: statistics.py
Statistics/src/database/: model.py  session.py
Statistics/src/message_broker/: callback_functions.py  consumer.py
Statistics/src/statistics_service/: statistics.py
Statistics/src/tools/: repo_alchemy_linker.py
Statistics/src/utils/: model_repository.py
Statistics/tests/: Makefile  README.md  tests_e2e.py  tests_message_broker.py  tests_unit.py
TasksService/: Dockerfile  pyproject.toml  tasks.proto
TasksService/src/: config.py  run.py
TasksService/src/database/: model.py  session.py
TasksService/src/tasks_service/: routers.py
TasksService/src/utils/: model_repository.py
TasksService/tests/: Makefile  tests_e2e.py  tests_unit.py
common/: repository.py  schema.py
common/proto/: tasks.proto  tasks_pb2.py
common/statistics_proto/: statistics.proto  statistics_pb2.py  statistics_pb2_grpc.py
common/tasks_proto/: tasks.proto  tasks_pb2_grpc.py
doc/: C4Container.puml  C4Context.puml  ER.puml
tests/: Makefile  auth.py  common.py  conftest.py  statistics.py  tasks.py  test_create_task.py  test_send_like.py
tools/kafka-dev/: docker-compose.yml
