[tool.poetry]
name = "mainservice"
version = "0.1.0"
description = ""
authors = ["Nikolay Nekrasov <nnnekrasov@edu.hse.ru>"]
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.28"
fastapi = "^0.110.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^3.2.0"
pydantic = {extras = ["email"], version = "^2.6.3"}
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
grpcio-tools = "^1.62.1"
grpcio = "^1.62.1"
aiokafka = "^0.10.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
