[tool.poetry]
name = "tasksservice"
version = "0.1.0"
description = ""
authors = ["Nikolay Nekrasov <nnnekrasov@edu.hse.ru>"]
readme = "README.md"
packages = [{include = "tasksservice", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"
sqlalchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
