[tool.poetry]
name = "tasksservice"
version = "0.1.0"
description = ""
authors = ["Nikolay Nekrasov <nnnekrasov@edu.hse.ru>"]
readme = "README.md"
packages = [{include = "tasks_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"
sqlalchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
pydantic = {extras = ["email"], version = "^2.6.4"}
pytest-asyncio = "^0.23.7"
pytest = "^8.2.2"
testcontainers = "^4.5.1"
pytest-grpc = "^0.8.0"
pytest-trio = "^0.8.0"
anyio = "^4.4.0"
pytest-twisted = "^1.14.1"
twisted = "^24.3.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
